force-app/main/default/objects/Account/fields/Account_Name_and_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_and_Shipping_City__c</fullName>
    <formula>Name + &quot; - &quot; +  ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name and Shipping City</label>
    <type>Text</type>
</CustomField>