force-app/main/default/objects/Account/fields/AccountName_SPE__c.field-meta.xml
<CustomField>
    <fullName>AccountName_SPE__c</fullName>
    <description>Encrypted Account Name For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Account Name (PE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>