force-app/main/default/objects/Account/fields/Active_In_Sleep_Study__c.field-meta.xml
<CustomField>
    <fullName>Active_In_Sleep_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active In Sleep Study</label>
    <type>Checkbox</type>
</CustomField>