force-app/main/default/objects/Account/fields/Active_Website_User__c.field-meta.xml
<CustomField>
    <fullName>Active_Website_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Website User</label>
    <type>Checkbox</type>
</CustomField>