force-app/main/default/objects/Account/fields/Agreed_To_Terms_And_Condition__c.field-meta.xml
<CustomField>
    <fullName>Agreed_To_Terms_And_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The patient&#39;s declaration to agreeing on the terms and condition, data privacy, and use of their registered data.</description>
    <label>Agreed To Terms And Condition</label>
    <type>Checkbox</type>
</CustomField>