force-app/main/default/objects/Account/fields/AHI_Score__c.field-meta.xml
<CustomField>
    <fullName>AHI_Score__c</fullName>
    <label>Current AHI Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Mild</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>