force-app/main/default/objects/Account/fields/AirView__c.field-meta.xml
<CustomField>
    <fullName>AirView__c</fullName>
    <description>Registered to AirView and if customer is exempt from billing.</description>
    <inlineHelpText>Is the customer currently on AirView and are they exempt from billing?</inlineHelpText>
    <label>AirView</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Exempt 1 month</fullName>
            </value>
            <value>
                <fullName>Exempt 3 months</fullName>
            </value>
            <value>
                <fullName>Exempt all time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>