force-app/main/default/objects/Account/fields/ALH_Agent__c.field-meta.xml
<CustomField>
    <fullName>ALH_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify customers who are ALH agents so they can easily be excluded from Silverpop mailings if required.</description>
    <inlineHelpText>Is this an ALH agent?</inlineHelpText>
    <label>ALH Agent</label>
    <type>Checkbox</type>
</CustomField>