force-app/main/default/objects/Account/fields/Allow_as_Diagnosis_Provider_on_SV_web__c.field-meta.xml
<CustomField>
    <fullName>Allow_as_Diagnosis_Provider_on_SV_web__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow as Referring Partner on SV website</description>
    <inlineHelpText>Allow as Referring Partner on SV website</inlineHelpText>
    <label>Allow as Diagnosis Provider on SV web</label>
    <type>Checkbox</type>
</CustomField>