force-app/main/default/objects/Account/fields/Allow_as_Purchase_From_on_SV_web__c.field-meta.xml
<CustomField>
    <fullName>Allow_as_Purchase_From_on_SV_web__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow as Purchase Store on SV website</description>
    <inlineHelpText>Allow as Purchase Store on SV website</inlineHelpText>
    <label>Allow as Purchase From on SV web</label>
    <type>Checkbox</type>
</CustomField>