force-app/main/default/objects/Account/fields/AMEX__c.field-meta.xml
<CustomField>
    <fullName>AMEX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMEX</label>
    <type>Checkbox</type>
</CustomField>