force-app/main/default/objects/Account/fields/areaType__c.field-meta.xml
<CustomField>
    <fullName>areaType__c</fullName>
    <description>Used to sort partners by area type on the partner online form.</description>
    <inlineHelpText>Used to sort partners by area type on the partner online form.</inlineHelpText>
    <label>Area Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metropolitan</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Metropolitan - Mobile</fullName>
            </value>
            <value>
                <fullName>Regional - Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>