force-app/main/default/objects/Account/fields/Average_Prescription_Processing_Hours__c.field-meta.xml
<CustomField>
    <fullName>Average_Prescription_Processing_Hours__c</fullName>
    <formula>if ( Number_of_Prescriptions__c &gt; 0,(Total_Delivery_Time_For_Prescriptions__c /  Number_of_Prescriptions__c)*24,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Prescription Processing Time in Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>