force-app/main/default/objects/Account/fields/Banner_Group__c.field-meta.xml
<CustomField>
    <fullName>Banner_Group__c</fullName>
    <description>Store location has a naming convention. Being part of a Banner Group doesn&#39;t mean head office makes decisions on buying price, store activity etc. These businesses still make independent decisions on the sleep business they run.</description>
    <inlineHelpText>Business that is part of a banner group.</inlineHelpText>
    <label>Banner Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALH</fullName>
            </value>
            <value>
                <fullName>Amcal</fullName>
            </value>
            <value>
                <fullName>APSS</fullName>
            </value>
            <value>
                <fullName>Bayside Healthcare</fullName>
            </value>
            <value>
                <fullName>Benchmark Sleep Services</fullName>
            </value>
            <value>
                <fullName>Blooms</fullName>
            </value>
            <value>
                <fullName>BOC</fullName>
            </value>
            <value>
                <fullName>Cardio Respiratory</fullName>
            </value>
            <value>
                <fullName>Careflight Int. Air Ambulance</fullName>
            </value>
            <value>
                <fullName>Catalyst</fullName>
            </value>
            <value>
                <fullName>Chemistworks</fullName>
            </value>
            <value>
                <fullName>Cincotta</fullName>
            </value>
            <value>
                <fullName>CLM Sleep Co.</fullName>
            </value>
            <value>
                <fullName>CPAP Australia</fullName>
            </value>
            <value>
                <fullName>CPAP Central</fullName>
            </value>
            <value>
                <fullName>CPAP Connect Australia</fullName>
            </value>
            <value>
                <fullName>CPAP Direct</fullName>
            </value>
            <value>
                <fullName>Electro Medical Group</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>HSS</fullName>
            </value>
            <value>
                <fullName>JCIN</fullName>
            </value>
            <value>
                <fullName>Lifetime care and support Authority of NSW</fullName>
            </value>
            <value>
                <fullName>NSW CPAP</fullName>
            </value>
            <value>
                <fullName>Optimal Pharmacy</fullName>
            </value>
            <value>
                <fullName>Perth CPAP</fullName>
            </value>
            <value>
                <fullName>Pharmacy 777</fullName>
            </value>
            <value>
                <fullName>Priceline</fullName>
            </value>
            <value>
                <fullName>ResSleep</fullName>
            </value>
            <value>
                <fullName>SBS</fullName>
            </value>
            <value>
                <fullName>Sleep for Health and Safety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>