force-app/main/default/objects/Account/fields/By_appointment__c.field-meta.xml
<CustomField>
    <fullName>By_appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For those outlet directory listed partners that want &#39;by appointment&#39; displayed next to the phone number.</description>
    <inlineHelpText>For those outlet directory listed partners that want &#39;by appointment&#39; displayed next to the phone number.</inlineHelpText>
    <label>By appointment</label>
    <type>Checkbox</type>
</CustomField>