force-app/main/default/objects/Account/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <description>DVA Membership Card Type</description>
    <inlineHelpText>DVA Membership Card Type</inlineHelpText>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Government_Agency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>