force-app/main/default/objects/Account/fields/Chemmart_Devices_sold__c.field-meta.xml
<CustomField>
    <fullName>Chemmart_Devices_sold__c</fullName>
    <description>Number of devices sold within the quarter for Chemmart stores, to allocate their star rating</description>
    <label>Chemmart Devices sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>