force-app/main/default/objects/Account/fields/Chemmart_star_rating__c.field-meta.xml
<CustomField>
    <fullName>Chemmart_star_rating__c</fullName>
    <description>Shows the tired level of support for Chemmart pharmacy&#39;s</description>
    <inlineHelpText>Star rating is based on units sold criteria.</inlineHelpText>
    <label>Chemmart star rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 star</fullName>
            </value>
            <value>
                <fullName>2 star</fullName>
            </value>
            <value>
                <fullName>3 star</fullName>
            </value>
            <value>
                <fullName>4 star</fullName>
            </value>
            <value>
                <fullName>5 star</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>