force-app/main/default/objects/Account/fields/Chin_Strap__c.field-meta.xml
<CustomField>
    <fullName>Chin_Strap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chin Strap</label>
    <type>Checkbox</type>
</CustomField>