force-app/main/default/objects/Account/fields/Consent_to_Share_Data_with_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Share_Data_with_Third_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for DVA Project</description>
    <inlineHelpText>Consent from customer to share data with third party</inlineHelpText>
    <label>Consent to Share Data with Third Party</label>
    <type>Checkbox</type>
</CustomField>