force-app/main/default/objects/Account/fields/Contact_for_reward__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_reward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact who can receive movie ticket reward</description>
    <inlineHelpText>Contact who can receive reward, movie ticket or gift card</inlineHelpText>
    <label>Contact for reward</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>