force-app/main/default/objects/Account/fields/Contact_for_reward_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_reward_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact for reward Parent Account</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact for reward Parent Account)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>