force-app/main/default/objects/Account/fields/CorePlus_Location__c.field-meta.xml
<CustomField>
    <fullName>CorePlus_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to Store Location Mapping table. Identifies which branch or store an external customer was created through.</description>
    <label>CorePlus Location</label>
    <referenceTo>Store_Location_Mapping__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>