force-app/main/default/objects/Account/fields/CorePlus_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>CorePlus_Location_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CorePlus Location Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>