force-app/main/default/objects/Account/fields/CPAP_Brand_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>CPAP_Brand_Opt_In__c</fullName>
    <description>This is an ad-hoc Account inline field for CPAP opt out flag - while the relationship Retail Brand is being worked out. Phase-I short-term solution.</description>
    <label>CPAP Brand Opt-In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Opt-In</fullName>
            </value>
            <value>
                <fullName>Opt-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>