force-app/main/default/objects/Account/fields/CPAP_Brand_Transacted__c.field-meta.xml
<CustomField>
    <fullName>CPAP_Brand_Transacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this customer has transacted with CPAP based on the invoices.</description>
    <label>CPAP Brand Transacted</label>
    <type>Checkbox</type>
</CustomField>