force-app/main/default/objects/Account/fields/CPAP_Status__c.field-meta.xml
<CustomField>
    <fullName>CPAP_Status__c</fullName>
    <label>Web Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trialist</fullName>
            </value>
            <value>
                <fullName>Purchaser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>