force-app/main/default/objects/Account/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>IF( ISBLANK( Phone ) , 0, 30) + 
IF(  ISPICKVAL( Oracle_Salesperson__c , &quot;&quot;),0, 20) + 
IF( 
OR( ISBLANK( ShippingStreet ) , ISBLANK( ShippingCity ) , ISBLANK( ShippingState ),  ISBLANK( ShippingPostalCode ),  ISBLANK( ShippingCountry ) ) 

, 0, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is an assessment of the quality of the data on this record.</inlineHelpText>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>