force-app/main/default/objects/Account/fields/Date_DVA_Member_Details_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Date_DVA_Member_Details_Recorded__c</fullName>
    <description>Date DVA Member Details Recorded</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date DVA Member Details Recorded</inlineHelpText>
    <label>Date DVA Member Details Recorded</label>
    <type>Date</type>
</CustomField>