force-app/main/default/objects/Account/fields/Device_Registration__c.field-meta.xml
<CustomField>
    <fullName>Device_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Device Registration</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Accounts (Device)</relationshipLabel>
    <relationshipName>Accounts_Device</relationshipName>
    <type>Lookup</type>
</CustomField>