force-app/main/default/objects/Account/fields/Device_Status__c.field-meta.xml
<CustomField>
    <fullName>Device_Status__c</fullName>
    <formula>IF ( ISBLANK( Device_Registration__c ), IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &quot;/img/s.gif&quot;) + &#39; No Device Selected&#39;,
IF ( Device_Registration__r.Product2.Id = &#39;-&#39; , IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &quot;/img/s.gif&quot;) + &#39; Product Other&#39;,
IF ( ISBLANK(Device_Registration__r.referringPartner__c ),
IF ( ISBLANK( Device_Registration__r.referringPartner__r.Name), IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &quot;/img/s.gif&quot;) + &#39; No Partner Selected&#39;, IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &quot;/img/s.gif&quot;) + &#39; Partner Other&#39; ),

IF (Device_Registration__r.referringPartner__r.Allow_as_Purchase_From_on_SV_web__c , IMAGE(&quot;/img/samples/flag_green.gif&quot; , &quot;/img/s.gif&quot;) + &#39; Valid Partner&#39; ,IMAGE(&quot;/img/samples/flag_red.gif&quot; , &quot;/img/s.gif&quot;) + &#39; INVALID PURCHASE PARTNER&#39;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Status</label>
    <type>Text</type>
</CustomField>