force-app/main/default/objects/Account/fields/diagnosedDate__c.field-meta.xml
<CustomField>
    <fullName>diagnosedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>