force-app/main/default/objects/Account/fields/Diagnosis_Provider_Status__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Provider_Status__c</fullName>
    <formula>IF ( ISBLANK( referringPartner__c ), IMAGE(&quot;/img/samples/flag_yellow.gif&quot; , &quot;/img/s.gif&quot;) + &#39; None Provided&#39;,

IF (referringPartner__r.Allow_as_Diagnosis_Provider_on_SV_web__c , IMAGE(&quot;/img/samples/flag_green.gif&quot; , &quot;/img/s.gif&quot;) + &#39; Valid Provider&#39;, IMAGE(&quot;/img/samples/flag_red.gif&quot; , &quot;/img/s.gif&quot;) + &#39; INVALID DIAGNOSIS PROVIDER&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diagnosis Provider Status</label>
    <type>Text</type>
</CustomField>