force-app/main/default/objects/Account/fields/DVA_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>DVA_Card_Number__c</fullName>
    <description>A field to store DVA Card Number held by a patient (MYOB/CorePlus).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DVA Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>