force-app/main/default/objects/Account/fields/DVA_patient__c.field-meta.xml
<CustomField>
    <fullName>DVA_patient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the patient a DVA patient.</description>
    <label>DVA patient</label>
    <type>Checkbox</type>
</CustomField>