force-app/main/default/objects/Account/fields/Eden_Sleep_Brand_Transacted__c.field-meta.xml
<CustomField>
    <fullName>Eden_Sleep_Brand_Transacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this customer has transacted with Eden Sleep based on the invoices.</description>
    <label>Eden Sleep Brand Transacted</label>
    <type>Checkbox</type>
</CustomField>