force-app/main/default/objects/Account/fields/EdenSleep_Brand_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>EdenSleep_Brand_Opt_In__c</fullName>
    <label>EdenSleep Brand Opt-In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Opt-In</fullName>
            </value>
            <value>
                <fullName>Opt-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>