force-app/main/default/objects/Account/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Caucasian or White</fullName>
            </value>
            <value>
                <fullName>East Asian</fullName>
            </value>
            <value>
                <fullName>American Indian or Alaskan Native</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Aboriginal/Torres Strait Islander</fullName>
            </value>
            <value>
                <fullName>South Asian (Indian)</fullName>
            </value>
            <value>
                <fullName>Middle East / North African</fullName>
            </value>
            <value>
                <fullName>Prefer not to mention</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>