force-app/main/default/objects/Account/fields/Ethnicity_Other__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ethnicity - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>