force-app/main/default/objects/Account/fields/External_Record_X_REF_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Record_X_REF_ID__c</fullName>
    <description>This field contains the cross reference ID of an external or foreign record. In the case of ANZ Retail Retention integration, if the field &quot;External System ID&quot; contains a GUID of MYOB, this field will then contain the ID of the cross-referenced record in CorePlus. In this case, MYOB is the parent record and can cross-reference one or more CorePlus record - and vice-versa.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External Record X REF ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>