force-app/main/default/objects/Account/fields/External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>External_System_ID__c</fullName>
    <description>A unique identifier for a foreign record sitting in Salesforce CRM. This ID should be used by external client app when querying or upserting record in SFDC. This ID is also searchable through the sidebar search facility.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External System ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>