force-app/main/default/objects/Account/fields/Fax_SPE__c.field-meta.xml
<CustomField>
    <fullName>Fax_SPE__c</fullName>
    <description>A platform encrypted field to store the fax number of the patient (if available).</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Fax SPE</label>
    <type>Phone</type>
</CustomField>