force-app/main/default/objects/Account/fields/File_Number__c.field-meta.xml
<CustomField>
    <fullName>File_Number__c</fullName>
    <description>Document File Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Document File Number/Membership number on the card. This number is unique, case insensitive. So another record with same number will not be permitted. Please search for the file number before creating new.</inlineHelpText>
    <label>File Number</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>