force-app/main/default/objects/Account/fields/FirstName_SPE__c.field-meta.xml
<CustomField>
    <fullName>FirstName_SPE__c</fullName>
    <description>Encrypted First Name For Members</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>First Name (PE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>