force-app/main/default/objects/Account/fields/Government_Agency__c.field-meta.xml
<CustomField>
    <fullName>Government_Agency__c</fullName>
    <description>Government Agency Affiliation</description>
    <inlineHelpText>Government Agency Affiliation</inlineHelpText>
    <label>Government Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DVA - Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>