force-app/main/default/objects/Account/fields/Home_Sleep_Tests__c.field-meta.xml
<CustomField>
    <fullName>Home_Sleep_Tests__c</fullName>
    <label>Home Sleep Tests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>