force-app/main/default/objects/Account/fields/Hospital_Wards_Number_of_Beds__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Wards_Number_of_Beds__c</fullName>
    <description>The number of beds in the hospital</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospital Wards - Number of Beds</label>
    <length>40</length>
    <type>Text</type>
</CustomField>