force-app/main/default/objects/Account/fields/How_Diagnosed__c.field-meta.xml
<CustomField>
    <fullName>How_Diagnosed__c</fullName>
    <label>How Diagnosed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Sleep Lab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>