force-app/main/default/objects/Account/fields/HST_Diagnostics_Level__c.field-meta.xml
<CustomField>
    <fullName>HST_Diagnostics_Level__c</fullName>
    <label>HST Diagnostics Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 2 &amp; 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>