force-app/main/default/objects/Account/fields/Humidifier_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Humidifier_Purchase_Date__c</fullName>
    <formula>Text(Humidifier_Registration__r.PurchaseDate)</formula>
    <label>Humidifier Purchase Date</label>
    <type>Text</type>
</CustomField>