force-app/main/default/objects/Account/fields/Humidifier_Referring_Partner__c.field-meta.xml
<CustomField>
    <fullName>Humidifier_Referring_Partner__c</fullName>
    <formula>Humidifier_Registration__r.referringPartner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Humidifier Referring Partner</label>
    <type>Text</type>
</CustomField>