force-app/main/default/objects/Account/fields/Humidifier_Referring_Partner_Location__c.field-meta.xml
<CustomField>
    <fullName>Humidifier_Referring_Partner_Location__c</fullName>
    <formula>Humidifier_Registration__r.referringPartner__r.BillingStreet &amp; &#39; &#39; &amp; 
Humidifier_Registration__r.referringPartner__r.BillingCity  &amp; &#39; &#39; &amp; 
Humidifier_Registration__r.referringPartner__r.BillingState &amp; &#39; &#39; &amp; 
Humidifier_Registration__r.referringPartner__r.BillingPostalCode  &amp; &#39; &#39; &amp; 
Humidifier_Registration__r.referringPartner__r.BillingCountry</formula>
    <label>Humidifier Referring Partner Location</label>
    <type>Text</type>
</CustomField>