force-app/main/default/objects/Account/fields/Humidifier_Registration__c.field-meta.xml
<CustomField>
    <fullName>Humidifier_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Humidifier Registration</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Accounts (Humidifier)</relationshipLabel>
    <relationshipName>Accounts_Humidifier</relationshipName>
    <type>Lookup</type>
</CustomField>