force-app/main/default/objects/Account/fields/Humidifier_Replacement_Date__c.field-meta.xml
<CustomField>
    <fullName>Humidifier_Replacement_Date__c</fullName>
    <formula>Humidifier_Registration__r.Replacement_Date_Non_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Humidifier Replacement Date</label>
    <type>Date</type>
</CustomField>