force-app/main/default/objects/Account/fields/Humidifier_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Humidifier_Serial_Number__c</fullName>
    <formula>Humidifier_Registration__r.SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Humidifier Serial Number</label>
    <type>Text</type>
</CustomField>